<?xml version="1.0"?>
<package>
  <name>netft_ethercat_hardware</name>
  <description>The netft ethercat hardware package</description>

  <version>0.2.0</version>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/netft</url>
  <url type="repository">https://github.com/fsuarez6/netft</url>
  <author>Francisco Suarez-Ruiz</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>ethercat_hardware</build_depend>
  <build_depend>netft_rdt_driver</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>ethercat_hardware</run_depend>
  <run_depend>netft_rdt_driver</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <ethercat_hardware plugin="${prefix}/ethercat_device_plugin.xml" />
  </export>

</package>
