<?xml version="1.0"?>
<package>
  <name>netft_example_controllers</name>
  <description>The netft example controllers package</description>

  <version>0.2.0</version>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/netft</url>
  <url type="repository">https://github.com/fsuarez6/netft</url>
  <author>Francisco Suarez-Ruiz</author>
    
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>ethercat_hardware</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>ethercat_hardware</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>

</package>
